Created message bus service and fixed bugs
Authors didn't display in the email template and after purchasing the
cart wasn't cleared

--- a/apps/api/src/assets/templates/order-confirmation.hbs
+++ b/apps/api/src/assets/templates/order-confirmation.hbs
@@ -87,7 +87,7 @@
                 <td>{{this.book.title}}</td>
                 <td>
                   {{#each this.book.authors}}
-                    <span>{{ this.name }}</span>
+                    <span>{{ this.author.name }}</span>
                   {{/each}}
                 </td>
                 <td>{{this.quantity}}</td>
