Removed unused code

--- a/libs/client-web/cart/feature/order-process/src/lib/components/cart-items/cart-items.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/cart-items/cart-items.component.html
@@ -5,7 +5,7 @@
   "
 >
   @if (cartItemsLoading() && cartItems().length === 0) {
-    <lib-cart-item-sekeleton />
+    <lib-cart-item-skeleton />
   } @else {
     @for (cartItem of cartItems(); track cartItem.book.id) {
       <lib-cart-item
