--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -62,9 +62,7 @@
             {{ cartItem().quantity }} pieces
           </span>
         }
-        <span
-          class="@md:font-bold @lg:text-xl @3xl:text-2xl @6xl:text-3xl @xl:mr-6"
-        >
+        <span class="@md:font-bold @lg:text-xl @3xl:text-2xl @6xl:text-3xl">
           {{ cartItem().book.price | currency: 'USD' }}
         </span>
       </span>
