Changed images to web and home path to '/'

--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -107,7 +107,7 @@
           <td class="h-[11rem] relative">
             <img
               class="aspect-[3/4] max-w-32 object-cover py-4 rounded-base"
-              [ngSrc]="item.book.coverImage ?? 'assets/images/not-found.png'"
+              [ngSrc]="item.book.coverImage"
               [alt]="item.book.title"
               fill
             />
