--- a/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
+++ b/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
@@ -6,7 +6,7 @@
     class="relative rounded-base overflow-hidden flex w-full h-full xl:content-end xl:h-content"
   >
     <img
-      ngSrc="assets/auth-books.webp"
+      ngSrc="assets/images/auth-books.webp"
       fill
       class="object-fill object-center w-full"
       alt="book store"
