--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -18,7 +18,7 @@
   </div>
   <img
     class="w-full h-auto"
-    ngSrc="assets/images/books-home.png"
+    ngSrc="assets/images/books-home.webp"
     width="640"
     height="415"
     priority
