Minor changes and bug fixes

--- a/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
@@ -5,7 +5,11 @@
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
     } @else if (error()) {
-      <div>{{ error() }}</div>
+      <lib-error-and-retry-message
+        [error]="error()"
+        unableToLoad="account data"
+        (onRetry)="getUserInformation()"
+      />
     } @else {
       <div
         libOrderProcessItem
