--- a/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
+++ b/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
@@ -6,7 +6,7 @@
     [class.pointer-events-none]="!clickable()"
     (click)="select()"
   >
-    <span class="flex gap-4 justify-start">
+    <!--<span class="flex gap-4 justify-start">
       <span class="text-sm text-muted-color font-semibold w-24 text-start">
         Phone
       </span>
@@ -19,8 +19,8 @@
       <span class="text-base flex justify-start">
         {{ address()?.firstName }}
         {{ address()?.lastName }}
-      </span>
-    </span>
+      </span> </span
+    >-->
     <span class="flex gap-4">
       <span class="text-sm text-muted-color font-semibold min-w-24 text-start">
         Address
