--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -7,7 +7,7 @@
     <img
       [alt]="book().title + 'cover image'"
       class="!h-full !w-auto mx-auto !aspect-[3/4] object-fill rounded-base"
-      [ngSrc]="book().coverImage"
+      [ngSrc]="book().coverImage || 'assets/images/image-not-found.webp'"
       width="480"
       height="640"
     />
