--- a/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
@@ -9,7 +9,7 @@
       >
         <img
           class="rounded-base !w-fit 2xl:!w-full h-full"
-          [ngSrc]="book()?.coverImage ?? ''"
+          [ngSrc]="book()?.coverImage || 'assets/images/image-not-found.webp'"
           [alt]="book()?.title + ' cover image'"
           width="350"
           height="500"
