--- a/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
+++ b/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
@@ -10,7 +10,7 @@
     <lib-section-wrapper header="Address information">
       <lib-address-information
         [address]="selectedUserAddress()"
-        [removeable]="false"
+        [removable]="false"
         (editEvent)="edit()"
       />
     </lib-section-wrapper>
