--- a/apps/delivery-manager/src/styles.css
+++ b/apps/delivery-manager/src/styles.css
@@ -1,19 +1,26 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@plugin "daisyui";
+@layer tailwind-base, primereact, tailwind-utilities;
+
+/* IMPORTANT: In "styled" mode you must add the PrimeReact Theme here. Do NOT include in "unstyled" mode */
+@import 'primereact/resources/themes/lara-light-blue/theme.css'
+  layer(primereact);
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
 
 body {
   min-height: 100vh;
   max-width: 3840px;
   width: 100%;
   overflow-x: hidden;
+  font-family: var(--font-family);
 }
 
-.btn {
-  @apply rounded-full;
-}
-
-.wrapper {
-  @apply rounded-base bg-neutral p-base rounded-base;
-}
+/* .wrapper { */
+/*   @apply rounded-base bg-neutral p-base rounded-base; */
+/* } */
