--- a/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
@@ -4,6 +4,7 @@
     @if (loading() && !user()) {
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
       <p-skeleton libOrderProcessItem width="100%" height="2rem" />
+      <p-skeleton libOrderProcessItem width="100%" height="2rem" />
     } @else if (error()) {
       <lib-error-and-retry-message
         [error]="error()"
@@ -11,24 +12,8 @@
         (onRetry)="getUserInformation()"
       />
     } @else {
-      <div
-        libOrderProcessItem
-        class="flex items-center justify-between @container"
-      >
-        <div class="flex flex-col @lg:flex-row">
-          <span class="min-w-24 text-sm font-semibold text-muted-color">
-            Email
-          </span>
-          <span>{{ user()?.email }}</span>
-        </div>
-        <p-button
-          (onClick)="setEditingField('email')"
-          pTooltip="Edit email"
-          tooltipPosition="left"
-          showDelay="300"
-          icon="pi pi-pencil"
-          ariaLabel="Edit email"
-        />
+      <div libOrderProcessItem>
+        <lib-user-information [user]="user() ?? null" [removable]="false" (editEvent)="setEditingField('user-information')" />
       </div>
 
       <div
@@ -45,6 +30,8 @@
           (onClick)="setEditingField('password')"
           pTooltip="Edit password"
           tooltipPosition="left"
+          [text]="true"
+          size="small"
           showDelay="300"
           icon="pi pi-pencil"
           ariaLabel="Edit password"
@@ -66,7 +53,7 @@
 
 <p-dialog
   [header]="dialogHeader()"
-  [visible]="isDialogVisible() && editingField() === 'email'"
+  [visible]="isDialogVisible() && editingField() === 'user-information'"
   [modal]="true"
   styleClass="w-full max-w-[48rem] mx-4 w-full"
   (visibleChange)="setEditingField(null)"
