--- a/libs/client-web/cart/feature/order-process/src/lib/components/order-checkout/order-checkout.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/order-checkout/order-checkout.component.html
@@ -1,5 +1,13 @@
 @if (submitted() && isOrderInvalid()) {
   <div class="flex flex-col gap-base">
+    @if (isCustomerInformationInvalid()) {
+      <p-message
+        severity="error"
+        icon="pi pi-exclamation-circle"
+        text="Fill in personal information"
+        styleClass="rounded-2xl"
+      />
+    }
     @if (!isAddressSelected()) {
       <p-message
         severity="error"
