--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -3,6 +3,7 @@
 
   <div class="flex flex-col gap-base">
     <div class="flex flex-col gap-base">
+      <lib-customer-information />
       <lib-delivery-address />
       <lib-shipping-method />
       <lib-payment-method />
