--- a/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
+++ b/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
@@ -5,8 +5,8 @@
     [favouriteBooks]="favouriteBooks()"
     [loading]="loading()"
     [error]="error()"
-    (addToCartEvent)="addToCart($event)"
-    (addToFavouriteEvent)="addToFavourite($event)"
+    (addToCartEvent)="addBookToCart($event)"
+    (addToFavouriteEvent)="addBookToFavourite($event)"
     (retryEvent)="retry()"
   />
 </div>
