--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -107,7 +107,9 @@
           <td class="h-[11rem] relative">
             <img
               class="aspect-[3/4] max-w-32 object-cover py-4 rounded-base"
-              [ngSrc]="item.book.coverImage"
+              [ngSrc]="
+                item.book.coverImage || 'assets/images/image-not-found.webp'
+              "
               [alt]="item.book.title"
               fill
             />
