Minor changes in order process ui

--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
@@ -20,7 +20,7 @@
       >
         <span class="flex items-center text-lg gap-4">
           <span class="pi pi-credit-card"></span>
-          <span>{{ payments()[0] }}</span>
+          <span>credit card</span>
         </span>
         <span class="">Free</span>
       </button>
@@ -82,7 +82,7 @@
     >
       <span class="flex items-center text-lg gap-4">
         <span class="pi pi-wallet"></span>
-        <span>{{ payments()[1] }}</span>
+        <span>six digit code</span>
       </span>
       <span class="">Free</span>
     </button>
