--- a/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
+++ b/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
@@ -7,7 +7,7 @@
     (click)="select()"
   >
     <span class="flex gap-4">
-      <span class="text-sm text-muted-color font-semibold min-w-24 text-start">
+      <span class="text-sm text-muted-color font-semibold w-16 text-start">
         Address
       </span>
       <span class="flex flex-col items-start">
