--- a/libs/client-web/shared/ui/src/lib/user-information/user-information.component.html
+++ b/libs/client-web/shared/ui/src/lib/user-information/user-information.component.html
@@ -1,5 +1,5 @@
 <span class="flex gap-4 justify-start">
-  <span class="text-sm text-muted-color font-semibold w-24 text-start">
+  <span class="text-sm text-muted-color font-semibold w-12 @md:w-24 text-start">
     Email
   </span>
   <span class="text-base flex justify-start">
@@ -7,7 +7,7 @@
   </span>
 </span>
 <span class="flex gap-4 justify-start">
-  <span class="text-sm text-muted-color font-semibold w-24 text-start">
+  <span class="text-sm text-muted-color font-semibold w-12 @md:w-24 text-start">
     Name
   </span>
   <span class="text-base flex justify-start">
@@ -22,7 +22,7 @@
   </span>
 </span>
 <span class="flex gap-4 justify-start">
-  <span class="text-sm text-muted-color font-semibold w-24 text-start">
+  <span class="text-sm text-muted-color font-semibold w-12 @md:w-24 text-start">
     Phone
   </span>
   <span class="text-base !text-start">{{
