--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -1,7 +1,7 @@
 <lib-order-container>
   <lib-cart-items />
 
-  <div class="flex flex-col gap-base">
+  <div class="flex flex-col gap-base relative">
     <div class="flex flex-col gap-base">
       <lib-customer-information />
       <lib-delivery-address />
