--- a/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
+++ b/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
@@ -3,6 +3,7 @@
     size="small"
     styleClass="min-w-max h-10"
     label="Clear filters"
+    [outlined]="true"
     severity="contrast"
     [badge]="activeFiltersCount()"
     (click)="clearFilters()"
