--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -56,19 +56,28 @@
 <footer
   class="bg-content-background w-full p-4 gap-10 rounded-base grid grid-cols-1 place-items-center"
 >
-  <div class="flex flex-col gap-4">
-    <div class="text-lg font-bold">Contact</div>
-    <div class="flex items-center gap-4">
-      <span class="w-24">Address:</span>
-      <span>John Smith street 19/3</span>
+  <div
+    class="grid grid-cols-[repeat(auto-fit,minmax(250px,1fr))] w-full gap-base"
+  >
+    <div class="flex flex-col gap-4 @container">
+      <div class="text-lg font-bold">Contact</div>
+      <div class="flex flex-col @sm:flex-row @sm:items-center gap-4">
+        <span class="w-24 text-xs font-bold">Address</span>
+        <span>Pretty street 19/3</span>
+      </div>
+      <div class="flex flex-col @sm:flex-row @sm:items-center gap-4">
+        <span class="w-24 text-xs font-bold">Email</span>
+        <span>ecommerce.bookstore.clientweb&#64;gmail.com</span>
+      </div>
+      <div class="flex flex-col @sm:flex-row @sm:items-center gap-4">
+        <span class="w-24 text-xs font-bold">Phone</span>
+        <span>123 123 123</span>
+      </div>
     </div>
-    <div class="flex items-center gap-4">
-      <span class="w-24">Email:</span>
-      <span>e-commerce&#64;gmail.com</span>
-    </div>
-    <div class="flex items-center gap-4">
-      <span class="w-24">Phone:</span>
-      <span>123 123 123</span>
+
+    <div class="flex flex-col gap-4">
+      <div class="text-lg font-bold">Support</div>
+      <a [routerLink]="faqUrl" class="underline underline-offset-4">FAQ</a>
     </div>
   </div>
 
