--- a/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
@@ -21,9 +21,10 @@
         [(ngModel)]="amount"
         size="large"
         [min]="1"
-        [max]="availableQuantity"
+        [max]="availableQuantity()"
         (onBlur)="onBlurInput()"
         buttonLayout="horizontal"
+        ariaLabel="Amount"
         spinnerMode="horizontal"
         inputId="integeronly"
         class="max-w-80 w-full"
