--- a/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
+++ b/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
@@ -30,7 +30,7 @@
       <a
         [routerLink]="ordersUrl"
         [queryParams]="{ orderDetailsId: orderDetailsId() }"
-        class="text-primary"
+        class="font-bold text-lg underline"
       >
         Go to your order details
       </a>
