--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -47,10 +47,10 @@
       }
     </div>
     @defer {
-      <div class="flex flex-col">
+      <div class="flex flex-col gap-base">
         <lib-book-details />
 
-        <div class="@container flex flex-col gap-4">
+        <div class="@container flex flex-col gap-base">
           <h3 libSectionHeader>Reviews</h3>
           <lib-reviews-summary />
           <lib-reviews />
