--- a/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  <div class="flex flex-col gap-base w-full">
+  <div class="flex flex-col gap-base w-full bg-con">
     <p-breadcrumb [model]="breadcrumbs()" />
     <div
       class="grid grid-cols-1 md:grid-cols-[1fr_2fr] 2xl:grid-cols-1 gap-base"
@@ -16,47 +16,57 @@
         />
       </div>
       <div class="flex flex-col gap-base w-full">
-        <h3 class="text-3xl md:text-4xl lg:text-5xl 4xl:text-6xl">
-          {{ book()?.title }}
-        </h3>
-        <div class="flex flex-wrap gap-4 mb-8">
-          @for (author of book()?.authors; track author.id) {
-            <div class="text-xl text-muted-color">
-              {{ author.name }}
-            </div>
-          }
-        </div>
-        <div class="grid grid-cols-1 lg:grid-cols-2">
-          <div class="flex flex-col gap-base">
-            @if (book()?.tag) {
-              <p-tag
-                class="w-fit"
-                [value]="book()?.tag"
-                [severity]="book()?.tag | bookTagToSeverity"
-              />
+        <div
+          class="flex flex-col gap-6 p-base rounded-base bg-content-background"
+        >
+          <h3 class="text-3xl md:text-4xl lg:text-5xl 4xl:text-6xl">
+            {{ book()?.title }}
+          </h3>
+          <div class="flex flex-wrap gap-4">
+            @for (author of book()?.authors; track author.id) {
+              <div class="text-xl text-muted-color">
+                {{ author.name }}
+              </div>
             }
+          </div>
+        </div>
+        <div class="grid grid-cols-1">
+          <div class="flex flex-col gap-base">
+            <div class="p-base rounded-base bg-content-background">
+              @if (book()?.tag) {
+                <p-tag
+                  class="w-fit"
+                  [value]="book()?.tag"
+                  [severity]="book()?.tag | bookTagToSeverity"
+                />
+              }
+            </div>
 
             <div class="flex flex-col gap-2">
               <h3 libSectionHeader>Details</h3>
-              <lib-detail-row
-                label="Category"
-                [value]="book()?.category?.name ?? ''"
-              />
-              @if (book()?.pages) {
-                <lib-detail-row label="Pages" [value]="book()?.pages ?? 0" />
-              }
-              @if (book()?.language) {
+              <div
+                class="flex flex-col gap-2 p-base rounded-base bg-content-background"
+              >
                 <lib-detail-row
-                  label="Language"
-                  [value]="book()?.language ?? ''"
+                  label="Category"
+                  [value]="book()?.category?.name ?? ''"
                 />
-              }
-              @if (book()?.publishedDate) {
-                <lib-detail-row
-                  label="Publish date"
-                  [value]="book()?.publishedDate | date"
-                />
-              }
+                @if (book()?.pages) {
+                  <lib-detail-row label="Pages" [value]="book()?.pages ?? 0" />
+                }
+                @if (book()?.language) {
+                  <lib-detail-row
+                    label="Language"
+                    [value]="book()?.language ?? ''"
+                  />
+                }
+                @if (book()?.publishedDate) {
+                  <lib-detail-row
+                    label="Publish date"
+                    [value]="book()?.publishedDate | date"
+                  />
+                }
+              </div>
             </div>
           </div>
 
@@ -79,8 +89,10 @@
 @if (book()?.description) {
   <div class="flex flex-col gap-base">
     <h3 libSectionHeader>Description</h3>
-    <p>
-      {{ book()?.description }}
-    </p>
+    <div class="p-base rounded-base bg-content-background">
+      <p>
+        {{ book()?.description }}
+      </p>
+    </div>
   </div>
 }
